# navix

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE_MIT  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: client.yml  desktop.yml  docker.yml  release.yml  server.yml
apps/client/: README.md  package.json  tsconfig.json  vite.config.ts
apps/client/src/: main.tsx  router.ts  styled.d.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/client/src-tauri/capabilities/: client.json  default.json
apps/client/src-tauri/migrations/: 20260000000000_baseline.sql
apps/client/src-tauri/src/: init.rs  lib.rs  main.rs
apps/client/src-tauri/src/db/: error.rs  mod.rs  pool.rs
apps/client/src-tauri/src/invokes/: db.rs
apps/client/src-tauri/src/modules/: db.rs  mod.rs  telemetry.rs  tray.rs
apps/client/src-tauri/src/types/: mod.rs  sync.rs
apps/client/src-tauri/src/utils/: mod.rs
apps/client/src/components/common/: Loading.tsx
apps/client/src/components/layout/: Menus.tsx  RootLayout.tsx  UserIcon.tsx
apps/client/src/constants/: index.ts  menuItems.ts
apps/client/src/contexts/: AppProvider.tsx  AuthContext.tsx  Environment.context.ts  IconRefreshContext.tsx  LaunchpadSettingsContext.tsx  ModalContext.tsx  SyncContext.tsx  Theme.context.ts  ThemeContext.tsx
apps/client/src/features/Auth/: AuthSettings.tsx  LoginModal.tsx  UserProfileCard.tsx
apps/client/src/features/Settings/: BrowserSettings.tsx  LanguageSettings.tsx
apps/client/src/locales/: zh.json
apps/client/src/pages/: index.tsx
apps/client/src/pages/help/: about.tsx
apps/client/src/services/: apiClient.ts  errors.ts  iconSync.ts  sync.ts  tauri.ts
apps/client/src/styles/tokens/: spacing.ts
apps/client/src/types/: sync.ts
apps/client/src/utils/: config.ts  index.ts
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: init.rs  lib.rs
apps/desktop/src-tauri/src/db/: pool.rs
apps/desktop/src-tauri/src/db/repo/: claim_repo.rs  launchpad_repo.rs  mod.rs  sync_read_repo.rs  sync_repo.rs
apps/desktop/src-tauri/src/invokes/: claim_db.rs  db.rs  launchpad_db.rs  mod.rs  sync.rs  sync_apply.rs  sync_db.rs  user_db.rs
apps/desktop/src-tauri/src/modules/: db.rs  telemetry.rs  tray.rs
apps/desktop/src-tauri/src/types/: session.rs
apps/desktop/src-tauri/src/utils/: mod.rs
apps/desktop/src/components/common/: DynamicIcon.tsx  InitializationError.tsx
apps/desktop/src/components/layout/: AppEventManager.tsx  UserIcon.tsx  WindowControls.tsx
apps/desktop/src/constants/: links.ts  menuItems.ts
apps/desktop/src/contexts/: Auth.context.ts  EnvironmentContext.tsx  IconRefresh.context.ts  LaunchpadSettings.context.ts  Modal.context.ts  Sync.context.ts  index.ts
apps/desktop/src/hooks/: useLocalStorage.ts  useMacAppMenu.tsx
apps/desktop/src/locales/: en.json
apps/desktop/src/pages/: _app.tsx  index.tsx
apps/desktop/src/services/: apiClient.ts  authSession.ts  claim.ts  launchpadDb.ts  sync.ts  user.ts
apps/desktop/src/types/: session.ts
apps/desktop/src/utils/: browser.ts  fs.ts  logger.ts  url.ts
apps/server/: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  build.ps1  build.rs  build_docker.sh
apps/server/migrations/: 20260000000000_baseline.sql
apps/server/package/DEBIAN/: control  postinst  postrm  prerm
apps/server/package/lib/systemd/system/: navix-server.service
apps/server/scripts/: build_deb.sh
apps/server/src/: app_config.rs  config.rs  error.rs  main.rs  observability.rs
apps/server/src/api/: mod.rs  response.rs
apps/server/src/api/handlers/: admin_handler.rs  mod.rs  navigation_handler.rs  sync_handler.rs  user_handler.rs
apps/server/src/api/middleware/: telemetry.rs
apps/server/src/api/routes/: index.rs  jwt.rs  mod.rs
apps/server/src/db/: connection.rs  mod.rs  sync_sql.rs
apps/server/src/models/: mod.rs  refresh_token.rs  search_engine.rs  sync.rs  sync_session.rs  user.rs  website.rs
apps/server/src/services/: admin_service.rs  mod.rs  navigation_service.rs  session_service.rs  static_handler.rs  sync_service.rs  sync_session_persist.rs  sync_session_service.rs  user_service.rs
apps/server/src/utils/: mod.rs
apps/server/web/: index.html  package.json  vite.config.ts
apps/server/web/src/: App.css  App.tsx
apps/server/web/src/api/: index.ts
apps/server/web/src/components/: AuthLayout.tsx  ControlCenter.tsx  DynamicIcon.tsx  Footer.module.css  Footer.tsx  PreferenceDock.module.css
apps/server/web/src/i18n/: context.ts  messages.ts  types.ts
apps/server/web/src/i18n/locales/: en-US.ts  zh-CN.ts
apps/server/web/src/layouts/: AppShell.tsx
apps/server/web/src/pages/: Dashboard.tsx  Launchpad.module.css  Launchpad.tsx  NotFound.tsx  UserSettings.module.css
apps/server/web/src/router/: ProtectedRoute.tsx  SessionBootstrap.tsx
apps/web/: package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: index.ts
apps/web/src/auth/: tokenStore.ts
apps/web/src/components/: AuthLayout.tsx  ControlCenter.module.css  ControlCenter.tsx  DynamicIcon.module.css  DynamicIcon.tsx  Footer.tsx  PreferenceDock.tsx  UserMenu.module.css  UserMenu.tsx
apps/web/src/hooks/: useCurrentUser.ts
apps/web/src/i18n/: I18nProvider.tsx  useI18n.ts
apps/web/src/layouts/: AppShell.module.css  AppShell.tsx
apps/web/src/pages/: Admin.module.css  Admin.tsx  Dashboard.module.css  Dashboard.tsx  Launchpad.module.css  Launchpad.tsx  Login.tsx  NotFound.module.css  NotFound.tsx  UserSettings.tsx
apps/web/src/router/: ProtectedRoute.tsx  SessionBootstrap.tsx  index.tsx
docs/: client-app.md  desktop-client.md  observability.md  server.md  telemetry-event-dictionary-template.md
scripts/: count-code-lines.ts  set-version.mjs
(+38 files in other folders)
