[package]
name = "navix-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared-rs = { workspace = true, features = ["server", "sqlx"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
validator = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
axum = { workspace = true, features = ["multipart", "json"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
tower-http = { workspace = true, features = ["trace", "cors", "limit"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "macros", "chrono", "sqlite", "uuid", "migrate"] }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rustls = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "chrono"] }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
shadow-rs = { workspace = true, features = ["metadata"] }
anyhow = { workspace = true }
semver = { workspace = true }
md5 = { workspace = true }
httpdate = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
shadow-rs = { workspace = true }
winres = { workspace = true }

[dev-dependencies]
tower = "0.5.3"
