[package]
name = "navix"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Navix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "navix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
shared-rs = { workspace = true }

tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-clipboard-manager = { version = "2.3.2" }
tauri-plugin-fs = { version = "2.4.5" }
tauri-plugin-opener = { version = "2.5.3" }
tauri-plugin-process = { version = "2.3.1" }
tauri-plugin-dialog = { version = "2.6.0" }
tauri-plugin-http = { version = "2.5.7", features = ["json", "dangerous-settings", "blocking", "multipart"] }
tauri-plugin-notification = { version = "2.3.3" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate"] }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { version = "2.5.1" }
tauri-plugin-global-shortcut = { version = "2.3.1" }
tauri-plugin-single-instance = { version = "2.4.0" }
tauri-plugin-updater = { version = "2.10.0" }
tauri-plugin-window-state = { version = "2.4.1" }
